# assists

./: .gitignore  CMakeLists.txt  README.md  assists  build.sh  glad.c  main.cpp  makefile  shift_assist.py
glfw-3.3/: CMakeLists.txt  cmake_uninstall.cmake
glfw-3.3/tests/: clipboard  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  vulkan  windows
glfw-3.4/: CMakeLists.txt  cmake_uninstall.cmake
glfw-3.4/src/: glfw3.pc
include/: glad.h
include/glad/: glad.h
logo/: logo.icns  logo.txt
src/: app.cpp  app.h  main.cpp
src/configs/: parser.cpp  parser.h
src/configs/system/: Bop.h  Dres.h  Duna.h  Eeloo.h  Eve.h  Gilly.h  Ike.h  Jool.h  Kerbin.h  Laythe.h  Minmus.h  Moho.h  Mun.h  Pol.h  Sun.h  Tylo.h  Vall.h  source.md  system.h
src/constants/: consts.h
src/debug/: debug.cpp  debug.h  perft.cpp  perft.h
src/engine/: consts.h  motion.cpp  motion.h  types.cpp  types.h
src/fonts/: poppinsRegular.h
src/render/: render.cpp  render.h  ui.cpp  ui.h
src/render/meshes/: planet.h  sphere.h
src/render/shaders/: planetFragment.h  planetVertex.h
systems/gpp/: Ciro.cfg
systems/rss/: Sun.cfg
